# utf_view

./: .beman-tidy.yaml  .clang-format  .exemplar_version  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  ci.ps1  ci.sh  concepts.cpp  concepts.cpp.in  concepts_test.cpp  concepts_test.cpp.in  formatting_notes.txt  iface.cpp  iface_test.cpp  lockfile.json  preprocess.py  test.cpp  traits.cpp.in  traits_test.cpp.in  unpack.cpp  unpack.cpp.in  unpack_test.cpp  unpack_test.cpp.in  utf_iterator.cpp  utf_iterator.cpp.in  utf_iterator_test.cpp  utf_view.cpp  utf_view.cpp.in  utf_view_test.cpp  utf_view_test.cpp.in  vcpkg-configuration.json  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  ci_tests.yml  pre-commit-check.yml  pre-commit-update.yml  vcpkg-release.yml
cmake/: beman.utf_view-config.cmake.in  gnu-toolchain.cmake  llvm-toolchain.cmake  msvc-toolchain.cmake
examples/: CMakeLists.txt  null_term_argv_environ.cpp  player_name.cpp  read_until_invalid.cpp  readme_examples.cpp
include/UtfView/: code_unit_view.hpp  null_term.hpp  to_utf_view.hpp  utfview.hpp
include/UtfView/detail/: concepts.hpp  constexpr_unless_msvc.hpp  erroneous_behavior_global.hpp
include/beman/utf_view/: CMakeLists.txt  code_unit_view.hpp  config.hpp  config_generated.hpp.in  endian_view.hpp  null_term.hpp  to_utf_view.hpp  utf_view.cppm  utf_view.hpp
include/beman/utf_view/detail/: concepts.hpp  constant_wrapper_polyfill.hpp  constexpr_unless_msvc.hpp  erroneous_behavior_global.hpp  fake_inplace_vector.hpp  nontype_t_polyfill.hpp  simd_transcode.hpp
include/utf_view/: code_unit_view.hpp  null_term.hpp  to_utf_view.hpp  utf_view.hpp  utfview.hpp
include/utf_view/detail/: concepts.hpp  constexpr_unless_msvc.hpp  erroneous_behavior_global.hpp
infra/: .beman_submodule
infra/cmake/: enable-experimental-import-std.cmake  use-fetch-content.cmake
paper/: CMakeLists.txt  P2728.md  P3705.md
paper/diagram_sources/: error_handling.graffle  iterator.graffle  utf16_2.graffle  utf8_2.graffle  viewoptimization.graffle  viewoptimization2-pt1.graffle
paper/generator/: .clang-format  generator.sh  post_clang_format.py
papers/: CMakeLists.txt  P2728.md  P3705.md  P4030.md  P9999.md
papers/diagram_sources/: 3-10.graffle  3-11.graffle  3-8.graffle  3-9.graffle  error_handling.graffle  filterview.graffle  iterator.graffle  utf32.graffle  utf8-1.graffle  utf8-2.graffle  utf8-3.graffle  utf8.psd  viewoptimization2-pt1-alternate.graffle  viewoptimization2-pt2.graffle
papers/generator/: .clang-format  generator.sh  post_clang_format.py
port/: portfile.cmake.in  vcpkg.json.in
simd_kernel/bench/: transcode_u16_u8.bench.cpp
simd_kernel/test/: transcode_u16_u8.test.cpp
src/UtfView/: CMakeLists.txt
src/UtfView/tests/: CMakeLists.txt  code_unit_view.t.cpp  framework.cpp  framework.hpp  main.t.cpp  null_term.t.cpp  readme_examples.t.cpp  to_utf_view.t.cpp
src/UtfView/tests/detail/: concepts.t.cpp
src/UtfView/tests/std_archetypes/: exposition_only.hpp  exposition_only.t.cpp  iterator.hpp  iterator.t.cpp
src/beman/utf_view/: CMakeLists.txt  utf_view.cpp  utf_view.cppm
src/utf_view/: CMakeLists.txt
src/utf_view/tests/: CMakeLists.txt  code_unit_view.t.cpp  framework.cpp  framework.hpp  main.t.cpp  null_term.t.cpp  readme_examples.t.cpp  test_iterators.hpp  to_utf_view.t.cpp
src/utf_view/tests/detail/: concepts.t.cpp
src/utf_view/tests/std_archetypes/: exposition_only.hpp  exposition_only.t.cpp  iterator.hpp  iterator.t.cpp
tests/beman/utf_view/: CMakeLists.txt  code_unit_view.t.cpp  endian_view.t.cpp  endian_view.test.cpp  framework.cpp  framework.hpp  main.t.cpp  main.test.cpp  module_smoke_test.test.cpp  null_term.t.cpp  null_term_argv_environ.t.cpp  readme_examples.t.cpp  test_iterators.hpp  to_utf.benchmark.cpp  to_utf_view.t.cpp  to_utf_view.test.cpp  utf_view.t.cpp
tests/beman/utf_view/detail/: concepts.t.cpp  concepts.test.cpp  constexpr_unless_msvc.t.cpp  fake_inplace_vector.t.cpp  nontype_t_polyfill.t.cpp
tests/beman/utf_view/std_archetypes/: exposition_only.hpp  exposition_only.t.cpp  exposition_only.test.cpp  iterator.hpp  iterator.t.cpp  iterator.test.cpp
tests/utf_view/: CMakeLists.txt  framework.hpp  main.t.cpp  readme_examples.t.cpp  test_iterators.hpp
tests/utf_view/std_archetypes/: exposition_only.hpp  exposition_only.t.cpp  iterator.hpp  iterator.t.cpp
