# SPDX-License-Identifier: BSL-1.0

#   Copyright Eddie Nolan 2023 - 2026.
# Distributed under the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE.txt or copy at
#          https://www.boost.org/LICENSE_1_0.txt)

find_package(MparkWg21 REQUIRED)

wg21_add_paper(P2728 ALL)
wg21_add_paper(P3705 ALL)
wg21_add_paper(P4030 ALL)
